After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743153 - Missing object roles in jawutil
Missing object roles in jawutil
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-01-19 00:21 UTC by Magdalen Berns (irc magpie)
Modified: 2015-02-27 16:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (3.10 KB, patch)
2015-01-19 00:38 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-01-19 00:21:08 UTC
The following roles are missing or wrongly allocated in jawutil.c

ATK_ROLE_DESKTOP_FRAME
ATK_ROLE_EDITBAR
ATK_ROLE_FOOTER
ATK_ROLE_HEADER
ATK_ROLE_HTML_CONTAINER;
ATK_ROLE_PARAGRAPH
ATK_ROLE_RADIO_BUTTON
ATK_ROLE_RADIO_MENU_ITEM
ATK_ROLE_RULER

This might explain why some focused widgets seem to get muted.
Comment 1 Magdalen Berns (irc magpie) 2015-01-19 00:38:58 UTC
Created attachment 294832 [details] [review]
Patch to address problem
Comment 2 André Klapper 2015-02-27 16:59:14 UTC
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]