Update object roles to include missing roles

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=743153